# simona-ai-computer-operator

./: .env.template  .gitignore  .mcp.json  .output.txt  CLAUDE.md  README.md  SOUL.md  api-spending.csv  pyproject.toml
.claude/: settings.json  statusline-command.sh
.claude/hooks/: block-git-in-simona.sh  speak-response.sh  validate-image-read.sh  voice-control.sh
.claude/memory/: MEMORY.md  horror_games_wishlist.md
ai-api-prices-april-may-2026/: WORKLOG.md
ai-api-prices-april-may-2026/linkedin/: post-final.txt  teaser.txt
backend/LM/: Dockerfile  README.md  download_model.py  requirements.txt  server.py
backend/Ollama/: README.md
browseruse/: README.md
bsides-tampa-2026/: session_summary.md
bsides-tampa-2026/decoded/: td_ciphertext.b64  td_disasm.txt
daemon/: PROTOCOL.md  cost.py  install-agent.sh  notify.py  scheduler.py  tick.sh  uninstall-agent.sh
docs/: repl-loop-brainstorm.md
handlers/: observe_marlow.py  review_drafts.py
images/: design_v2.excalidraw
mcp/: README.md  pyproject.toml  server.py
mcp/browser/: README.md  cdp_client.py  cli.py  server.py  start-chrome-persistent.sh  start-chrome.sh  tools.py
mcp/cursor/: animate.py
mcp/highlight/: cli.py
mcp/kokoro/: aliases.sh  cli.py  drainer.py  read-file.sh  tools.py
mcp/simona/: cli.py
mcp/youtube/: README.md  cli.py  server.py  tools.py
nextjs-client/: .gitignore  package-lock.json  package.json
nextjs-client-app/: package-lock.json  package.json
ollama/: README.md
openwebui/: README.md
roocode/: README.md
tasks/: last_scheduled.json
(+84 files in other folders)
