[project]
name = "simona-ai-computer-operator"
version = "0.1.0"
description = "Simona AI - autonomous computer operator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27.0",
    "websockets>=12.0",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2024.12.0",
    "kokoro-onnx>=0.4.0",
    "soundfile>=0.12.1",
    "numpy>=1.26",
]